# exd-cpp

./: CMakeLists.txt  README.md  makefile
include/: exd.hpp  io.hpp  random.hpp  range.hpp  string.hpp
include/exd/: io.hpp  random.hpp  string.hpp  timer.hpp
test/: makefile  test-exd.cc  test-io.cc  test-random.cc  test-range.cc  test-string.cc  test-timer.cc  test-vector.cc
